--- a/app/src/main/res/layout/sample_restaurant_element_view.xml
+++ b/app/src/main/res/layout/sample_restaurant_element_view.xml
@@ -43,7 +43,7 @@
         android:gravity="center_vertical|center_horizontal|right" android:layout_weight="2"
         android:src="@drawable/selectimage"
         android:layout_centerInParent="true"
-        android:onClick="selectPicture"
+        android:onClick="selectImage"
         android:tint="#bbbbbb"
         android:tintMode="screen" />
 
