--- a/app/src/main/res/layout/activity_select_image.xml
+++ b/app/src/main/res/layout/activity_select_image.xml
@@ -41,7 +41,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/restaurantRating"
+        android:id="@+id/selectImageView_restaurantRating"
         android:layout_below="@+id/restaurantName"
         android:layout_centerHorizontal="true"
         android:stepSize="0.5"
