--- a/app/src/main/res/layout/sample_restaurant_element_view.xml
+++ b/app/src/main/res/layout/sample_restaurant_element_view.xml
@@ -32,7 +32,9 @@
         android:layout_alignParentTop="false"
         android:layout_alignParentBottom="false"
         android:layout_alignWithParentIfMissing="false"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
     <!-- image select view -->
 
