--- a/app/src/main/res/layout/sample_restaurant_element_view.xml
+++ b/app/src/main/res/layout/sample_restaurant_element_view.xml
@@ -45,6 +45,7 @@
         android:gravity="center_vertical|center_horizontal|right" android:layout_weight="2"
         android:src="@drawable/selectimage"
         android:layout_centerInParent="true"
+        android:focusable="false"
         android:tint="#bbbbbb"
         android:tintMode="screen" />
 
@@ -55,6 +56,7 @@
         android:layout_toRightOf="@id/restaurantCheckbox" android:layout_toLeftOf="@id/selectImage"
         android:gravity="center_vertical" android:singleLine="true"
         android:hint="Restaurant name"
+        android:focusable="false"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <RatingBar
@@ -64,6 +66,7 @@
         android:numStars="5"
         android:layout_marginLeft="6dp"
         android:layout_marginBottom="10dp"
+        android:focusable="false"
         android:layout_below="@+id/restaurantNameEditText"
         android:layout_alignLeft="@+id/restaurantNameEditText"
         android:layout_alignStart="@+id/restaurantNameEditText" />
