--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,15 @@
         android:layout_below="@+id/plusImage"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete All"
+        android:id="@+id/deleteAll"
+        android:onClick="deleteAllColumns"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/plusImage"
+        android:layout_toStartOf="@+id/plusImage" />
 </RelativeLayout>
