--- a/app/src/main/res/layout/sample_restaurant_element_view.xml
+++ b/app/src/main/res/layout/sample_restaurant_element_view.xml
@@ -43,11 +43,9 @@
         android:layout_width="wrap_content" android:layout_height="50dp"
         android:layout_marginLeft="6dp" android:layout_marginRight="6dp"
         android:gravity="center_vertical|center_horizontal|right" android:layout_weight="2"
-        android:src="@drawable/selectimage"
+        android:src="@drawable/imageicon"
         android:layout_centerInParent="true"
-        android:focusable="false"
-        android:tint="#bbbbbb"
-        android:tintMode="screen" />
+        android:focusable="false" />
 
     <TextView
         android:id="@+id/restaurantNameTextView"
@@ -57,14 +55,14 @@
         android:gravity="center_vertical" android:singleLine="true"
         android:hint="Restaurant name"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:editable="false" />
+        android:editable="false"
+        android:focusable="false" />
 
     <RatingBar
         android:id="@+id/myRatingBar"
         style="?android:attr/ratingBarStyleSmall"
         android:layout_width="wrap_content" android:layout_height="wrap_content"
         android:numStars="5"
-        android:layout_marginLeft="6dp"
         android:layout_marginBottom="10dp"
         android:focusable="false"
         android:layout_below="@+id/restaurantNameTextView"
